--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "polymer": "Polymer/polymer#^1.2.0",
     "app-router": "^2.6.1",
-    "iron-routes": "*"
+    "iron-routes": "*",
+    "gravatar-component": "^1.0.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
