--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "web-component-tester": "^4.0.0"
   },
-  "ignore": []
+  "ignore": [],
+  "resolutions": {
+    "jquery": "1.11.0"
+  }
 }
