--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "polymer": "Polymer/polymer#^1.2.0",
     "app-router": "^2.6.1",
     "iron-routes": "*",
-    "gravatar-component": "^1.0.3"
+    "gravatar-component": "^1.0.3",
+    "iron-grid": "*"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
